--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -9,52 +9,13 @@ FROM ubuntu
 WORKDIR /root
 
 # Get git
-RUN apt-get -y install git
+RUN apt-get update
+RUN apt-get -y install wget
 
 # Download letsencrypt files
-RUN git clone https://github.com/letsencrypt/letsencrypt
+RUN wget https://dl.eff.org/certbot-auto
+RUN chmod a+x ./certbot-auto
+RUN sed -i 's/apt-get install/apt-get -y install/g' certbot-auto
+RUN ./certbot-auto --os-packages-only --no-self-upgrade
 
-# Let's install let's encrypt
-RUN mkdir /opt/letsencrypt
-
-RUN mkdir -p /opt/letsencrypt/src/letsencrypt-auto-source/
-RUN cp letsencrypt/letsencrypt-auto-source/letsencrypt-auto /opt/letsencrypt/src/letsencrypt-auto-source/letsencrypt-auto
-
-WORKDIR /opt/letsencrypt
-RUN /opt/letsencrypt/src/letsencrypt-auto-source/letsencrypt-auto --os-packages-only && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* \
-           /tmp/* \
-           /var/tmp/*
-
-WORKDIR /root
-
-RUN mkdir -p /opt/letsencrypt/src/
-RUN cp letsencrypt/setup.py /opt/letsencrypt/src/
-RUN cp letsencrypt/README.rst /opt/letsencrypt/src/
-RUN cp letsencrypt/CHANGES.rst /opt/letsencrypt/src/
-RUN cp letsencrypt/MANIFEST.in /opt/letsencrypt/src/
-
-#RUN mkdir -p /opt/letsencrypt/src/letsencrypt
-RUN cp -r letsencrypt/letsencrypt /opt/letsencrypt/src/letsencrypt/
-
-RUN cp -r letsencrypt/acme /opt/letsencrypt/src/acme
-
-#RUN mkdir -p /opt/letsencrypt/src/letsencrypt-apache/
-RUN cp -r letsencrypt/letsencrypt-apache /opt/letsencrypt/src/letsencrypt-apache
-
-#RUN mkdir -p /opt/letsencrypt/src/letsencrypt-nginx/
-RUN cp -r letsencrypt/letsencrypt-nginx /opt/letsencrypt/src/letsencrypt-nginx
-
-WORKDIR /opt/letsencrypt
-RUN virtualenv --no-site-packages -p python2 /opt/letsencrypt/venv && \
-    /opt/letsencrypt/venv/bin/pip install \
-    -e /opt/letsencrypt/src/acme \
-    -e /opt/letsencrypt/src \
-    -e /opt/letsencrypt/src/letsencrypt-apache \
-    -e /opt/letsencrypt/src/letsencrypt-nginx
-
-# Prep for running
-ENV PATH /opt/letsencrypt/venv/bin:$PATH
-#ENTRYPOINT [ "letsencrypt" ]
 CMD ["/bin/bash"]
